<resources>
    <string name="app_name">Manager</string>
    <string name="register">Registration</string>
    <string name="name">Name\n</string>
    <string name="password">Password\n</string>
    <string name="email">Email\n</string>
    <string name="create_account">Create Account</string>
    <string name="countinue_as_a">Countinue as a</string>
    <string name="lecturar">Lecturar</string>
    <string name="admin">Admin</string>
    <string name="student_registration">Student Registration</string>
    <string name="lecturauar_registration">Lecturauar Registration</string>
    <string name="admin_registration">Admin Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="forgot_password">Forget password</string>
    <string name="enter_email">Enter your email to recover your password</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    <!-- Solver descriptions -->
    <string name="simple_solver_name">Simple Solver</string>
    <string name="choco_solver_name">Choco Solver</string>
    <string name="simple_solver_desc">Fast greedy algorithm that works on all devices. May produce sub-optimal solutions.</string>
    <string name="choco_solver_desc">Advanced constraint programming that finds optimal solutions. May be slower but produces better timetables.</string>
    <string name="solver_selection_title">Solver Type:</string>
    <string name="terms_and_conditions_text">Welcome to the University Timetable Management System.\n\n
1. Data Usage and Privacy\n
- Your registration information will be stored securely in our database.\n
- Personal information will only be used for account management and system functionality.\n
- Uploaded documents (e.g., ID and university contract) will be stored securely and are only accessible to system administrators.\n\n

2. Account Approval\n
- All registrations are subject to review and approval by administrators.\n
- Account approval may take up to 24-48 hours.\n
- You will not be able to access the system until your account is approved.\n\n

3. System Usage\n
- The application system is for educational purposes only.\n
- You agree to use the system in accordance with university policies.\n
- Any misuse of the system may result in account suspension.\n\n

4. Responsibilities\n
- You are responsible for maintaining the confidentiality of your account information.\n
- You agree to notify administrators of any unauthorized use of your account.\n
- You are responsible for keeping your contact information up-to-date.\n\n

By accepting these terms, you acknowledge that you have read and understood the conditions for using the University Timetable Management System.</string>
    <string-array name="resource_types">
        <item>Room</item>
        <item>Facility</item>
    </string-array>
</resources>